# hands-on-pyo3

./: .gitignore  00_Example_Usage.ipynb  Cargo.toml  README.md  pyproject.toml
slides/: .gitignore  pdf_to_pptx.py  slides.html  slides.md  slides.pptx
src/: core.rs  lib.rs
