[package]
name = "jxl_demo"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "jxl_demo"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16"
pyo3 = { version = "0.26.0", features = ["abi3", "extension-module"] }
numpy = "0.26"
jxl-oxide = { version = "0.11.4", default-features = false}
